fix: text overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@
 
 @layer base {
   .bg-card {
-    @apply p-4 bg-zinc-50 dark:bg-zinc-800/40 rounded-large;
+    @apply p-4 bg-zinc-50 dark:bg-zinc-800/40 rounded-large min-w-0;
   }
   .grid-card {
     @apply grid sm:grid-cols-[repeat(auto-fill,minmax(25rem,auto))] grid-cols-[repeat(auto-fill,minmax(20rem,auto))] gap-8;
